change code structure

--- a/src/app/about/pricing/pricing.component.html
+++ b/src/app/about/pricing/pricing.component.html
@@ -1,139 +1,141 @@
-
-
-
 <!----------------------------- header about -------------------------------->
 
-<header class = "about-head">
-    <div class="about-content d-flex justify-content-center align-items-center">
-        <div>
-            <h1>PRICING PLAN</h1>
-        <div class="about-links">
-            <ul class = "list-unstyled d-flex justify-content-center">
-                <li class = "after">
-                    <a class = "pe-3 home" (click) = goHome()>Home </a>
-                </li>
-                <li class = "ps-3">
-                    <a href="#">Membership</a>
-                </li>
-            </ul>
-        </div>
-        </div>
+<header class="about-head">
+  <div class="about-content d-flex justify-content-center align-items-center">
+    <div>
+      <h1>PRICING PLAN</h1>
+      <div class="about-links">
+        <ul class="list-unstyled d-flex justify-content-center">
+          <li class="after">
+            <a class="pe-3 home" (click)="goHome()">Home </a>
+          </li>
+          <li class="ps-3">
+            <a href="#">Membership</a>
+          </li>
+        </ul>
+      </div>
     </div>
-
+  </div>
 </header>
 
-
 <!----------------------------- header about -------------------------------->
 
-
 <section class="pricing py-5 container">
+  <div
+    class="pricing-head text-center"
+    data-aos="fade-up"
+    data-aos-duration="1000"
+  >
+    <h3>Pick Your Plan. <span>No Hidden Charge!!</span></h3>
+    <p>
+      Other technological advances made during the Paleolithic era were clothing
+      and shelter both technologies
+      <br />
+      cannot be dated exactly, but they were a key to humanity's progress.
+    </p>
+  </div>
 
-    <div class="pricing-head text-center" data-aos="fade-up" data-aos-duration="1000">
-        <h3>Pick Your Plan. <span>No Hidden Charge!!</span></h3>
-        <p>Other technological advances made during the Paleolithic era were clothing and shelter both technologies
-            <br>
-            cannot be dated exactly, but they were a key to humanity's progress.
-        </p>
+  <div
+    class="row py-5"
+    data-aos="fade-up"
+    data-aos-duration="1000"
+    data-aos-delay="150"
+  >
+    <div class="col-lg-3 col-md-6 mb-3">
+      <div class="pricing-content text-center py-4">
+        <p>startup</p>
+        <div class="dollar-content pb-2">
+          <span class="dollar-sign">$</span>
+          <span class="pricing-num">17</span>
+          <sup>99</sup>
+          <sub>/ mo</sub>
+        </div>
+        <div class="discount">
+          <ul class="list-unstyled">
+            <li>100 Free Classes</li>
+            <li class="muted">960 Premium Classes</li>
+            <li>Expert Community (iOS, Android)</li>
+            <li class="muted">Cross Platforms Apps</li>
+            <li class="muted">Offline Access</li>
+            <li>Support Teachers</li>
+            <li>
+              <button class="btn">buy now</button>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
-
-    <div class="row py-5" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="150">
-        <div class="col-lg-3 col-md-6 mb-3">
-             <div class="pricing-content text-center py-4">
-                 <p>startup</p>
-                 <div class="dollar-content pb-2">
-                     <span class = "dollar-sign">$</span>
-                     <span class="pricing-num">17</span>
-                     <sup>99</sup>
-                     <sub>/ mo</sub>
-                 </div>
-                 <div class = "discount">
-                     <ul class="list-unstyled">
-                         <li>100 Free Classes</li>
-                         <li class="muted">960 Premium Classes</li>
-                         <li>Expert Community (iOS, Android)</li>
-                         <li class="muted">Cross Platforms Apps</li>
-                         <li class="muted">Offline Access</li>
-                         <li>Support Teachers</li>
-                         <li>
-                             <button class="btn">buy now</button>
-                         </li>
-                     </ul>
-                 </div>
-             </div>
+    <div class="col-lg-3 col-md-6 mb-3">
+      <div class="pricing-content text-center py-4">
+        <p>GROWTH</p>
+        <div class="dollar-content pb-2">
+          <span class="dollar-sign">$</span>
+          <span class="pricing-num">29</span>
+          <sup>99</sup>
+          <sub>/ mo</sub>
         </div>
-        <div class="col-lg-3 col-md-6 mb-3">
-            <div class="pricing-content text-center py-4">
-                <p>GROWTH</p>
-                <div class="dollar-content pb-2">
-                    <span class = "dollar-sign">$</span>
-                    <span class="pricing-num">29</span>
-                    <sup>99</sup>
-                    <sub>/ mo</sub>
-                </div>
-                <div class = "discount">
-                    <ul class="list-unstyled">
-                        <li>100 Free Classes</li>
-                        <li class ="muted">960 Premium Classes</li>
-                        <li>Expert Community (iOS, Android)</li>
-                        <li>Cross Platforms Apps</li>
-                        <li class ="muted">Offline Access</li>
-                        <li>Support Teachers</li>
-                        <li>
-                            <button class="btn">buy now</button>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+        <div class="discount">
+          <ul class="list-unstyled">
+            <li>100 Free Classes</li>
+            <li class="muted">960 Premium Classes</li>
+            <li>Expert Community (iOS, Android)</li>
+            <li>Cross Platforms Apps</li>
+            <li class="muted">Offline Access</li>
+            <li>Support Teachers</li>
+            <li>
+              <button class="btn">buy now</button>
+            </li>
+          </ul>
         </div>
-        <div class="col-lg-3 col-md-6 mb-3">
-            <div class="pricing-content text-center py-4">
-                <p>PREMIUM</p>
-                <div class="dollar-content pb-2">
-                    <span class = "dollar-sign">$</span>
-                    <span class="pricing-num">69</span>
-                    <sup>99</sup>
-                    <sub>/ mo</sub>
-                </div>
-                <div class = "discount">
-                    <ul class="list-unstyled">
-                        <li>100 Free Classes</li>
-                        <li>960 Premium Classes</li>
-                        <li>Expert Community (iOS, Android)</li>
-                        <li>Cross Platforms Apps</li>
-                        <li class ="muted">Offline Access</li>
-                        <li>Support Teachers</li>
-                        <li>
-                            <button class="btn">buy now</button>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-3 col-md-6 mb-3">
-            <div class="pricing-content border-0 text-center py-4">
-                <p>ENTERPRISE</p>
-                <div class="dollar-content pb-2">
-                    <span class = "dollar-sign">$</span>
-                    <span class="pricing-num">159</span>
-                    <sup>99</sup>
-                    <sub>/ mo</sub>
-                </div>
-                <div class = "discount">
-                    <ul class="list-unstyled">
-                        <li>100 Free Classes</li>
-                        <li>960 Premium Classes</li>
-                        <li>Expert Community (iOS, Android)</li>
-                        <li>Cross Platforms Apps</li>
-                        <li>Offline Access</li>
-                        <li>Support Teachers</li>
-                        <li>
-                            <button class="btn">buy now</button>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        
+      </div>
     </div>
-
+    <div class="col-lg-3 col-md-6 mb-3">
+      <div class="pricing-content text-center py-4">
+        <p>PREMIUM</p>
+        <div class="dollar-content pb-2">
+          <span class="dollar-sign">$</span>
+          <span class="pricing-num">69</span>
+          <sup>99</sup>
+          <sub>/ mo</sub>
+        </div>
+        <div class="discount">
+          <ul class="list-unstyled">
+            <li>100 Free Classes</li>
+            <li>960 Premium Classes</li>
+            <li>Expert Community (iOS, Android)</li>
+            <li>Cross Platforms Apps</li>
+            <li class="muted">Offline Access</li>
+            <li>Support Teachers</li>
+            <li>
+              <button class="btn">buy now</button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-3 col-md-6 mb-3">
+      <div class="pricing-content border-0 text-center py-4">
+        <p>ENTERPRISE</p>
+        <div class="dollar-content pb-2">
+          <span class="dollar-sign">$</span>
+          <span class="pricing-num">159</span>
+          <sup>99</sup>
+          <sub>/ mo</sub>
+        </div>
+        <div class="discount">
+          <ul class="list-unstyled">
+            <li>100 Free Classes</li>
+            <li>960 Premium Classes</li>
+            <li>Expert Community (iOS, Android)</li>
+            <li>Cross Platforms Apps</li>
+            <li>Offline Access</li>
+            <li>Support Teachers</li>
+            <li>
+              <button class="btn">buy now</button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
