--- a/src/app/carouselpicture/carouselpicture.component.html
+++ b/src/app/carouselpicture/carouselpicture.component.html
@@ -1,39 +1,31 @@
-
-
 <!-----------------------------------------------section carousel---------------------------->
 <section class="container py-5 carousel">
-    <div class="row">
-
-
-        <div class="col-12">
-            <owl-carousel-o [options]="customOptions">
-                <ng-template carouselSlide>
-                    <div class="img-poster">
-                        <img src="assets/images/1.png" alt="img-poster" srcset="">
-                    </div>
-                </ng-template>  
-                <ng-template carouselSlide>
-                    <div class="img-poster">
-                        <img src="assets/images/2.png" alt="img-poster" srcset="">
-                    </div>
-                </ng-template>  
-                <ng-template carouselSlide>
-                    <div class="img-poster">
-                        <img src="assets/images/3.png" alt="img-poster" srcset="">
-                    </div>
-                </ng-template> 
-                <ng-template carouselSlide>
-                    <div class="img-poster">
-                        <img src="assets/images/4.png" alt="img-poster" srcset="">
-                    </div>
-                </ng-template>  
-            </owl-carousel-o>
-        </div>
-
-
+  <div class="row">
+    <div class="col-12">
+      <owl-carousel-o [options]="customOptions">
+        <ng-template carouselSlide>
+          <div class="img-poster">
+            <img src="assets/images/1.png" alt="img-poster" srcset="" />
+          </div>
+        </ng-template>
+        <ng-template carouselSlide>
+          <div class="img-poster">
+            <img src="assets/images/2.png" alt="img-poster" srcset="" />
+          </div>
+        </ng-template>
+        <ng-template carouselSlide>
+          <div class="img-poster">
+            <img src="assets/images/3.png" alt="img-poster" srcset="" />
+          </div>
+        </ng-template>
+        <ng-template carouselSlide>
+          <div class="img-poster">
+            <img src="assets/images/4.png" alt="img-poster" srcset="" />
+          </div>
+        </ng-template>
+      </owl-carousel-o>
     </div>
-
+  </div>
 </section>
-
 
 <!-----------------------------------------------section carousel---------------------------->
