--- a/src/app/count/count.component.html
+++ b/src/app/count/count.component.html
@@ -3,7 +3,11 @@
 <section class="count py-5">
   <div class="container">
     <div class="row">
-      <div class="col-md-3 col-sm-3" data-aos="fade-up-right" data-aos-duration="1000">
+      <div
+        class="col-md-3 col-sm-3"
+        data-aos="fade-up-right"
+        data-aos-duration="1000"
+      >
         <div class="count-content text-center">
           <div class="icons mb-3">
             <i class="fas fa-graduation-cap fa-4x"></i>
@@ -12,7 +16,11 @@
           <p>Students</p>
         </div>
       </div>
-      <div class="col-md-3 col-sm-3" data-aos="fade-up" data-aos-duration="1000">
+      <div
+        class="col-md-3 col-sm-3"
+        data-aos="fade-up"
+        data-aos-duration="1000"
+      >
         <div class="count-content text-center">
           <div class="icons mb-3">
             <i class="far fa-bookmark fa-4x"></i>
@@ -21,7 +29,11 @@
           <p>Courses</p>
         </div>
       </div>
-      <div class="col-md-3 col-sm-3" data-aos="fade-up" data-aos-duration="1000">
+      <div
+        class="col-md-3 col-sm-3"
+        data-aos="fade-up"
+        data-aos-duration="1000"
+      >
         <div class="count-content text-center">
           <div class="icons mb-3">
             <i class="far fa-star fa-4x"></i>
@@ -30,7 +42,11 @@
           <p>Ratings</p>
         </div>
       </div>
-      <div class="col-md-3 col-sm-3" data-aos="fade-up-left" data-aos-duration="1000">
+      <div
+        class="col-md-3 col-sm-3"
+        data-aos="fade-up-left"
+        data-aos-duration="1000"
+      >
         <div class="count-content text-center">
           <div class="icons mb-3">
             <i class="fas fa-user-graduate fa-4x"></i>
