--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -48,8 +48,9 @@
                 ></a>
               </li>
               <li>
-                <a href="https://www.instagram.com/lintschool/"
-                   aria-label="follow company in instagram"
+                <a
+                  href="https://www.instagram.com/lintschool/"
+                  aria-label="follow company in instagram"
                   ><i class="fab fa-instagram"></i
                 ></a>
               </li>
