--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -44,20 +44,13 @@
 
 <!---------------------------------home header------------------------>
 
-
-
-
 <!---------------------------------welcome Component-------------------->
 <app-welcome></app-welcome>
 <!---------------------------------welcome Component-------------------->
 
-
-
 <!---------------------------------count Component-------------------->
 <app-count></app-count>
 <!---------------------------------count Component-------------------->
-
-
 
 <!---------------------------------Courses sectoin-------------------->
 <section class="courses container py-5">
@@ -65,7 +58,7 @@
     <h1 data-aos="fade-right" data-aos-duration="1000">Our Courses</h1>
     <p data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
       Find online courses and a wide range of related learning content from
-      across Educamp’s
+      across LintSchool’s
       <br />
       online store, schools, initiatives, and programs.
     </p>
@@ -537,15 +530,11 @@
 </section>
 <!---------------------------------Courses sectoin-------------------->
 
-
-
 <!----------------------------------Customer compononent------------------------------------->
 
 <app-customer></app-customer>
 
 <!----------------------------------Customer compononent------------------------------------->
-
-
 
 <!----------------------------------Event section------------------------------------->
 
@@ -633,27 +622,23 @@
 
 <!----------------------------------Event section------------------------------------->
 
-
-
 <!----------------------------------news section------------------------------------->
 
 <section class="news py-5">
   <div class="container">
     <div class="news-head pt-5 pb-4">
-      <h1 data-aos="fade-right"
-      data-aos-duration="1000" 
-      
-      >Recent News</h1>
-      <p data-aos="fade-right"
-      data-aos-duration="1000" 
-      data-aos-delay="100">
+      <h1 data-aos="fade-right" data-aos-duration="1000">Recent News</h1>
+      <p data-aos="fade-right" data-aos-duration="1000" data-aos-delay="100">
         See what’s going on inside our company and stay in touch by informe.
       </p>
     </div>
 
     <div class="row">
-      <div class="col-lg-4 col-md-6 mb-3" data-aos="fade-right"
-      data-aos-duration="1000" >
+      <div
+        class="col-lg-4 col-md-6 mb-3"
+        data-aos="fade-right"
+        data-aos-duration="1000"
+      >
         <div class="card">
           <img
             src="assets/images/news-1.jpg"
@@ -688,8 +673,11 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 mb-3" data-aos="fade-down"
-      data-aos-duration="1000">
+      <div
+        class="col-lg-4 col-md-6 mb-3"
+        data-aos="fade-down"
+        data-aos-duration="1000"
+      >
         <div class="card">
           <img
             src="assets/images/news-2.jpg"
@@ -724,8 +712,11 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6 mb-3" data-aos="fade-left"
-      data-aos-duration="1000">
+      <div
+        class="col-lg-4 col-md-6 mb-3"
+        data-aos="fade-left"
+        data-aos-duration="1000"
+      >
         <div class="card">
           <img
             src="assets/images/news-3.jpg"
@@ -766,14 +757,10 @@
 
 <!----------------------------------news section------------------------------------->
 
-
-
-
 <!----------------------------------instructor section------------------------------------->
 
 <section class="instructor container py-5">
-  <div class="row my-5 py-5" data-aos="fade-up"
-  data-aos-duration="1500">
+  <div class="row my-5 py-5" data-aos="fade-up" data-aos-duration="1500">
     <div
       class="col-md-12 py-5 d-flex justify-content-center align-items-center"
     >
@@ -787,9 +774,6 @@
 </section>
 
 <!----------------------------------instructor section------------------------------------->
-
-
-
 
 <!----------------------------------Carousel picture Component------------------------------------->
 <app-carouselpicture></app-carouselpicture>
