--- a/src/app/about/about-us/about-us.component.html
+++ b/src/app/about/about-us/about-us.component.html
@@ -31,8 +31,8 @@
       <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
         Welcome to LintSchool collection of world-class online learning
         opportunities. The Educamp Online Learning portal <br />
-        provides a gateway for the public to access LintSchool’s extensive learning
-        content.
+        provides a gateway for the public to access LintSchool’s extensive
+        learning content.
       </p>
     </div>
   </div>
