--- a/src/app/footer-head/footer-head.component.html
+++ b/src/app/footer-head/footer-head.component.html
@@ -1,31 +1,34 @@
-
-
 <!------------------------------footer head------------------------------>
 
-<section class = "footer-head py-4">
-    <div class="container">
-        <div class="row pt-4">
-
-            <div class="col-lg-6 mb-3">
-                <div class="footer-body">
-                    <h2>SIGN UP FOR NEWSLETTER</h2>
-                    <p>Submit your email and stay in touch by notify our news & update regularly</p>
-                </div>
-            </div>
-            <div class="col-lg-6 mb-3">
-                <div class="footer-body d-flex justify-content-end">
-                        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" placeholder="Enter your email">
-                        <button type = "submit" class="btn send">
-                            <i class="fas fa-paper-plane "></i>
-                        </button>
-                </div>
-            </div>
-    
-    
+<section class="footer-head py-4">
+  <div class="container">
+    <div class="row pt-4">
+      <div class="col-lg-6 mb-3">
+        <div class="footer-body">
+          <h2>SIGN UP FOR NEWSLETTER</h2>
+          <p>
+            Submit your email and stay in touch by notify our news & update
+            regularly
+          </p>
         </div>
+      </div>
+      <div class="col-lg-6 mb-3">
+        <div class="footer-body d-flex justify-content-end">
+          <label for="exampleFormControlInput1" class="form-label"
+            >Email address</label
+          >
+          <input
+            type="email"
+            class="form-control"
+            placeholder="Enter your email"
+          />
+          <button type="submit" class="btn send">
+            <i class="fas fa-paper-plane"></i>
+          </button>
+        </div>
+      </div>
     </div>
+  </div>
 </section>
-
 
 <!------------------------------footer head------------------------------>
