--- a/src/app/footer-head/footer-head.component.scss
+++ b/src/app/footer-head/footer-head.component.scss
@@ -1,92 +1,86 @@
-@import '../Scss/utils/colors';
-@import '../Scss/utils/fonts';
-@import '../Scss/utils/mixins';
-@import '../Scss/components/buttons';
-
+@import "../Scss/utils/colors";
+@import "../Scss/utils/fonts";
+@import "../Scss/utils/mixins";
+@import "../Scss/components/buttons";
 
 .footer-head {
-    width: 100%;
-    background: url('../../assets/images/pattern-1.png'), 
+  width: 100%;
+  background: url("../../assets/images/pattern-1.png"),
     linear-gradient(to top, $color_content3, $color_content3);
 
-    .footer-body {
+  .footer-body {
+    color: $color_main;
+    h2 {
+      color: $color_main;
+    }
+    p {
+      font-size: $fontSize_small;
+    }
+
+    .form-label {
+      display: none;
+    }
+    .form-control {
+      @extend .non-shadow;
+      width: 60%;
+
+      ::placeholder {
+        font-size: $fontSize_small + 0.4rem;
+      }
+    }
+    .send {
+      background-color: #2b2b2b;
+      @extend .non-shadow;
+      i {
+        padding: 10px;
         color: $color_main;
-        h2 {
-            color: $color_main;
-        }
-        p {
-            font-size: $fontSize_small;
-        }
-
-        .form-label {
-            display: none;
-        }
-        .form-control {
-            @extend .non-shadow;
-            width: 60%;
-
-            ::placeholder {
-                font-size: $fontSize_small + .4rem;
-            }
-        }
-        .send {
-            background-color: #2b2b2b;
-            @extend .non-shadow;
-            i {
-                padding: 10px;
-                color: $color_main;
-                font-size: $fontSize_small + .5rem;
-            }
-
-        }
+        font-size: $fontSize_small + 0.5rem;
+      }
     }
+  }
 }
 
+/*@media (max-width: 992px) and (min-width: 768px) */
 
-
-
-
-
-
-
-
-
-
-@media(max-width: 992px) and (min-width: 768px) {
-    .footer-head {
-        .row {
-            .footer-body {
-                width: 100% !important;
-                text-align: center;
-                justify-content: center !important;
-            }
-        }
+@media (max-width: 992px) and (min-width: 768px) {
+  .footer-head {
+    .row {
+      .footer-body {
+        width: 100% !important;
+        text-align: center;
+        justify-content: center !important;
+      }
     }
+  }
 }
 
+/*@media (max-width: 992px) and (min-width: 768px) */
 
+/*@media (max-width: 768px) and (min-width: 576px) */
 
-@media(max-width: 768px) and (min-width: 576px) {
-    .footer-head {
-        .row {
-            .footer-body {
-                text-align: center;
-                justify-content: center !important;
-            }
-        }
+@media (max-width: 768px) and (min-width: 576px) {
+  .footer-head {
+    .row {
+      .footer-body {
+        text-align: center;
+        justify-content: center !important;
+      }
     }
+  }
 }
 
+/*@media (max-width: 768px) and (min-width: 576px) */
 
+/*@media (max-width: 576px) and (min-width: 300px)*/
 
-
-@media(max-width: 576px) and (min-width: 300px) {
-    .footer-head {
-        .row {
-            .footer-body {
-                text-align: center;
-                justify-content: center !important;
-            }
-        }
+@media (max-width: 576px) and (min-width: 300px) {
+  .footer-head {
+    .row {
+      .footer-body {
+        text-align: center;
+        justify-content: center !important;
+      }
     }
+  }
 }
+/*@media (max-width: 576px) and (min-width: 300px)*/
