--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,161 +1,150 @@
-@import '../Scss/utils/colors';
-@import '../Scss/utils/fonts';
-@import '../Scss/utils/mixins';
-@import '../Scss/utils/spacing';
-@import '../Scss/components/buttons';
+@import "../Scss/utils/colors";
+@import "../Scss/utils/fonts";
+@import "../Scss/utils/mixins";
+@import "../Scss/utils/spacing";
+@import "../Scss/components/buttons";
 
 /*-------------------footer--------------------------------*/
 .footer-cotainer {
-    background-color: $bg-footer;
-    .footer-content {
-        .logo-name {
-            h3 {
-                font-size: $fontSize_mid + .5rem;
-                font-family: $font-family4;
-                color: $color_main;
-                span {
-                    color: $color_span;
-                }
+  background-color: $bg-footer;
+  .footer-content {
+    .logo-name {
+      h3 {
+        font-size: $fontSize_mid + 0.5rem;
+        font-family: $font-family4;
+        color: $color_main;
+        span {
+          color: $color_span;
         }
-        p {
-            text-transform: capitalize;
-            font-size: $fontSize_small;
-            font-weight: $font-weight1;
-            color: $color_title2;
-            position: relative;
-            bottom: 28px;
-            padding-left: $space_small + .2rem;
-        }
-        }
-        p {
-            position: relative;
-            bottom: 25px;
-            font-size: .9rem;
-        }
-
-        .icons {
-            ul {
-                li {
-                    cursor: pointer;
-                    font-size: .8rem;
-                    margin-right: 20px;
-                    text-align: center;
-                    i {
-                        line-height: 33px;
-                        color: $color-footer ;
-                        border: 1px solid $color-footer ;
-                        border-radius: 50%;
-                        width: 35px;
-                        height: 35px;
-
-                        &:hover {
-                            color: $color_span;
-                            border-color: $color_span;
-                        }
-                    }
-                }
-                
-            }
-        }
-
-
+      }
+      p {
+        text-transform: capitalize;
+        font-size: $fontSize_small;
+        font-weight: $font-weight1;
+        color: $color_title2;
+        position: relative;
+        bottom: 28px;
+        padding-left: $space_small + 0.2rem;
+      }
+    }
+    p {
+      position: relative;
+      bottom: 25px;
+      font-size: 0.9rem;
     }
 
-    .links {
-        h4 {
-            color: $color_main;
-            font-weight: $font-weight1;
-        }
-        a {
-            text-decoration: none;
-            color: rgba(228,230,235,0.70);
-            font-size: $fontSize_small;
-            font-weight:400;
-            line-height: 35px;
-            span {
-                padding-left: 10px;
-            }
-
-            &:hover {
-                color: $color_span;
-            }
-        }
-    }
-
-    .gallery {
-        h4 {
-            color: $color_main;
-            font-weight: $font-weight1;
-            padding-bottom: 15px;
-        }
-        img {
-            @include transition(.33s, opacity);
-            &:hover {
-                opacity: .7;
-            }
-        }
-        .picture-position {
-            position: relative;
-            right: 40px;
-        }
-    }
-    .address {
-        color: rgba(228,230,235,0.70);
-        h4 {
-            color: $color_main;
-            font-weight: $font-weight1;
-        }
+    .icons {
+      ul {
         li {
-            font-size: $fontSize_small;
-            padding-bottom: $space_small + .4rem;
-            span {
-                padding-left: 40px;
-                position: relative;
-            }
-            i {
-                padding-right: 20px;
-                color: $color_span;
-            }
-            a {
-                text-decoration: none;
-                color: inherit;
-            }
-        }
-    }
+          cursor: pointer;
+          font-size: 0.8rem;
+          margin-right: 20px;
+          text-align: center;
+          i {
+            line-height: 33px;
+            color: $color-footer;
+            border: 1px solid $color-footer;
+            border-radius: 50%;
+            width: 35px;
+            height: 35px;
 
-    .brdr {
-        border-bottom: 1px solid rgba(255,255,255,0.05);
-    }
-    .footer-bottom {
-        p {
-            color: $color_main;
-            font-size: $fontSize_small;
-            font-family: $font-family-alt;
-            a {
-                text-decoration: none;
-                color: $color_span !important;
+            &:hover {
+              color: $color_span;
+              border-color: $color_span;
             }
+          }
         }
+      }
     }
+  }
+
+  .links {
+    h4 {
+      color: $color_main;
+      font-weight: $font-weight1;
+    }
+    a {
+      text-decoration: none;
+      color: rgba(228, 230, 235, 0.7);
+      font-size: $fontSize_small;
+      font-weight: 400;
+      line-height: 35px;
+      span {
+        padding-left: 10px;
+      }
+
+      &:hover {
+        color: $color_span;
+      }
+    }
+  }
+
+  .gallery {
+    h4 {
+      color: $color_main;
+      font-weight: $font-weight1;
+      padding-bottom: 15px;
+    }
+    img {
+      @include transition(0.33s, opacity);
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+    .picture-position {
+      position: relative;
+      right: 40px;
+    }
+  }
+  .address {
+    color: rgba(228, 230, 235, 0.7);
+    h4 {
+      color: $color_main;
+      font-weight: $font-weight1;
+    }
+    li {
+      font-size: $fontSize_small;
+      padding-bottom: $space_small + 0.4rem;
+      span {
+        padding-left: 40px;
+        position: relative;
+      }
+      i {
+        padding-right: 20px;
+        color: $color_span;
+      }
+      a {
+        text-decoration: none;
+        color: inherit;
+      }
+    }
+  }
+
+  .brdr {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+  }
+  .footer-bottom {
+    p {
+      color: $color_main;
+      font-size: $fontSize_small;
+      font-family: $font-family-alt;
+      a {
+        text-decoration: none;
+        color: $color_span !important;
+      }
+    }
+  }
 }
-
-
 
 /*-------------------footer--------------------------------*/
 
-
-
-
-
-
-
-@media (max-width:576px) and (min-width: 300px) {
-    .footer-cotainer {
-        img {
-            margin-left: 10px;
-        }
-        .picture-position {
-            left: 2px;
-        }
+@media (max-width: 576px) and (min-width: 300px) {
+  .footer-cotainer {
+    img {
+      margin-left: 10px;
     }
+    .picture-position {
+      left: 2px;
+    }
+  }
 }
