update counter name

--- a/src/app/count/count.component.html
+++ b/src/app/count/count.component.html
@@ -12,7 +12,7 @@
           <div class="icons mb-3">
             <i class="fas fa-graduation-cap fa-4x"></i>
           </div>
-          <h3 class="counter">{{ count1 }}<span class="ps-1">+</span></h3>
+          <h3 class="counter">{{ studentCount }}<span class="ps-1">+</span></h3>
           <p>Students</p>
         </div>
       </div>
@@ -25,7 +25,7 @@
           <div class="icons mb-3">
             <i class="far fa-bookmark fa-4x"></i>
           </div>
-          <h3 class="counter">{{ count2 }}<span class="ps-1">+</span></h3>
+          <h3 class="counter">{{  courseCount }}<span class="ps-1">+</span></h3>
           <p>Courses</p>
         </div>
       </div>
@@ -38,7 +38,7 @@
           <div class="icons mb-3">
             <i class="far fa-star fa-4x"></i>
           </div>
-          <h3 class="counter">{{ count3 }}<span class="ps-1">+</span></h3>
+          <h3 class="counter">{{ ratingCount }}<span class="ps-1">+</span></h3>
           <p>Ratings</p>
         </div>
       </div>
@@ -51,7 +51,7 @@
           <div class="icons mb-3">
             <i class="fas fa-user-graduate fa-4x"></i>
           </div>
-          <h3 class="counter">{{ count4 }}<span class="ps-1">+</span></h3>
+          <h3 class="counter">{{ projectCount }}<span class="ps-1">+</span></h3>
           <p>projects</p>
         </div>
       </div>
