changed in aos animation in count component

--- a/src/app/count/count.component.html
+++ b/src/app/count/count.component.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div
         class="col-md-3 col-sm-3"
-        data-aos="fade-up-right"
+        data-aos="fade-up"
         data-aos-duration="1000"
       >
         <div class="count-content text-center">
@@ -44,7 +44,7 @@
       </div>
       <div
         class="col-md-3 col-sm-3"
-        data-aos="fade-up-left"
+        data-aos="fade-up"
         data-aos-duration="1000"
       >
         <div class="count-content text-center">
